--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -3,10 +3,10 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -26,7 +26,9 @@
     "expo-apple-authentication": "^6.4.2",
     "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.26",
     "expo-font": "~12.0.9",
+    "expo-health-connect": "^0.1.1",
     "expo-linking": "~6.3.1",
     "expo-random": "^14.0.1",
     "expo-router": "~3.5.23",
@@ -38,6 +40,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-health": "^1.18.0",
+    "react-native-health-connect": "^3.1.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -49,6 +53,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "expo-build-properties": "^0.12.5",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
